# picnic

./: Cargo.toml  README.md
examples/: example.env  some.json
src/: dotenv.rs  error.rs  input.rs  json.rs  main.rs  output.rs
tests/: cli.rs
